--- a/app/scss/utils/_spacing.scss
+++ b/app/scss/utils/_spacing.scss
@@ -81,6 +81,10 @@
 
   &--navbar {
     padding-top: calc(var(--_navbar) + 4rem); // 73px is the height of the navbar
+
+    @include breakpoint(md-tablet) {
+      padding-top: calc(var(--_navbar) + 0rem);
+    }
   }
 
   &--subnav {
